--- a/notebooks/Pt1cleaningAZ-maeva.ipynb
+++ b/notebooks/Pt1cleaningAZ-maeva.ipynb
@@ -195,11 +195,11 @@
        "333 Commerce St                 51\n",
        "221 Broadway                    47\n",
        "                              ... \n",
-       "511 Bridgeway Ave                1\n",
-       "5555 Edmondson Pike              1\n",
-       "2616 Taigans Ct                  1\n",
-       "2400 West End Ave                1\n",
-       "7263 Nolensville Rd              1\n",
+       "605 Country Meadow Ct            1\n",
+       "320 E Trinity Ln                 1\n",
+       "421 Hart Ln                      1\n",
+       "2909 Sidco Dr                    1\n",
+       "1301 Medical Center Dr           1\n",
        "Name: Address, Length: 4829, dtype: int64"
       ]
      },
@@ -274,11 +274,11 @@
        "333 Commerce St                 51\n",
        "221 Broadway                    47\n",
        "                              ... \n",
-       "511 Bridgeway Ave                1\n",
-       "5555 Edmondson Pike              1\n",
-       "2616 Taigans Ct                  1\n",
-       "2400 West End Ave                1\n",
-       "7263 Nolensville Rd              1\n",
+       "605 Country Meadow Ct            1\n",
+       "320 E Trinity Ln                 1\n",
+       "421 Hart Ln                      1\n",
+       "2909 Sidco Dr                    1\n",
+       "1301 Medical Center Dr           1\n",
        "Name: Address, Length: 4829, dtype: int64"
       ]
      },
@@ -671,14 +671,14 @@
        "37214      164\n",
        "37201      164\n",
        "37221      147\n",
-       "37204      140\n",
        "37138.0    140\n",
+       "37204      140\n",
        "37219      139\n",
        "37207      129\n",
        "37115      126\n",
        "37076      120\n",
-       "37212.0    115\n",
        "37218.0    115\n",
+       "37212.0    115\n",
        "37217      113\n",
        "37013      110\n",
        "37215      107\n",
@@ -700,36 +700,36 @@
        "37086.0     17\n",
        "37080       16\n",
        "37027       15\n",
-       "37213       14\n",
        "37220.0     14\n",
+       "37213       14\n",
        "37246.0      7\n",
        "37220        6\n",
-       "37189        5\n",
-       "37075.0      5\n",
        "37232.0      5\n",
+       "37075.0      5\n",
        "37240.0      5\n",
-       "37064.0      4\n",
+       "37189        5\n",
        "37135        4\n",
        "37122.0      4\n",
+       "37064.0      4\n",
        "37232        3\n",
+       "37066.0      2\n",
        "37090.0      2\n",
        "37160.0      2\n",
        "37172.0      2\n",
        "37073.0      2\n",
-       "37066.0      2\n",
-       "37135.0      1\n",
-       "37130.0      1\n",
-       "37067.0      1\n",
-       "37087.0      1\n",
-       "37129.0      1\n",
-       "38506.0      1\n",
-       "37040.0      1\n",
-       "37036.0      1\n",
-       "38401.0      1\n",
        "37086        1\n",
        "37240        1\n",
+       "37036.0      1\n",
+       "37040.0      1\n",
        "37363.0      1\n",
+       "37067.0      1\n",
+       "38506.0      1\n",
+       "38401.0      1\n",
+       "37087.0      1\n",
        "37663.0      1\n",
+       "37129.0      1\n",
+       "37130.0      1\n",
+       "37135.0      1\n",
        "Name: ZIP, dtype: int64"
       ]
      },
@@ -36005,7 +36005,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2bd4ed632ec433bbacb7ad09ec44c39",
+       "model_id": "1a166e1f8f994baaa36f641abc1474ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36046,8 +36046,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#MAEVA TIme series graph showing violations reported as time goes on from 0:00 to 23:59 and/or doing date+time timeline graph"
+    "# covid_only.to_csv(\"../data/hubNashville_cleaned.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
