--- a/notebooks/00_ONR_data_import.ipynb
+++ b/notebooks/00_ONR_data_import.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Part-1:\" data-toc-modified-id=\"Part-1:-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Part 1:</a></span><ul class=\"toc-item\"><li><span><a href=\"#To-do:-drop-columns-that-don't-contain-useful-data:\" data-toc-modified-id=\"To-do:-drop-columns-that-don't-contain-useful-data:-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>To do: drop columns that don't contain useful data:</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data Question 4: Nashville COVID-19 Violations  \n",
@@ -2100,7 +2110,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
