Post-presentation small changes

--- a/notebooks/Pt1cleaningAZ-maeva.ipynb
+++ b/notebooks/Pt1cleaningAZ-maeva.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import plotly.express as px\n",
     "\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact"
@@ -191,15 +192,15 @@
       "text/plain": [
        "210 Anne Dallas Dudley Blvd    287\n",
        "21B Fern Ave                   117\n",
-       "5106 Old Hickory Blvd           51\n",
        "333 Commerce St                 51\n",
+       "5106 Old Hickory Blvd           51\n",
        "221 Broadway                    47\n",
        "                              ... \n",
-       "605 Country Meadow Ct            1\n",
-       "320 E Trinity Ln                 1\n",
-       "421 Hart Ln                      1\n",
-       "2909 Sidco Dr                    1\n",
-       "1301 Medical Center Dr           1\n",
+       "2137 Elm Hill Marina             1\n",
+       "209 23rd Ave N                   1\n",
+       "284 Dee Cee Ct                   1\n",
+       "305 S 4th St                     1\n",
+       "150 14th Ave N                   1\n",
        "Name: Address, Length: 4829, dtype: int64"
       ]
      },
@@ -270,15 +271,15 @@
       "text/plain": [
        "210 Anne Dallas Dudley Blvd    287\n",
        "21B Fern Ave                   117\n",
-       "5106 Old Hickory Blvd           51\n",
        "333 Commerce St                 51\n",
+       "5106 Old Hickory Blvd           51\n",
        "221 Broadway                    47\n",
        "                              ... \n",
-       "605 Country Meadow Ct            1\n",
-       "320 E Trinity Ln                 1\n",
-       "421 Hart Ln                      1\n",
-       "2909 Sidco Dr                    1\n",
-       "1301 Medical Center Dr           1\n",
+       "2137 Elm Hill Marina             1\n",
+       "209 23rd Ave N                   1\n",
+       "284 Dee Cee Ct                   1\n",
+       "305 S 4th St                     1\n",
+       "150 14th Ave N                   1\n",
        "Name: Address, Length: 4829, dtype: int64"
       ]
      },
@@ -653,8 +654,8 @@
        "37214.0    429\n",
        "37221.0    414\n",
        "37203      387\n",
-       "37013.0    366\n",
        "37201.0    366\n",
+       "37013.0    366\n",
        "37204.0    322\n",
        "37219.0    320\n",
        "37076.0    314\n",
@@ -677,8 +678,8 @@
        "37207      129\n",
        "37115      126\n",
        "37076      120\n",
-       "37218.0    115\n",
        "37212.0    115\n",
+       "37218.0    115\n",
        "37217      113\n",
        "37013      110\n",
        "37215      107\n",
@@ -700,36 +701,36 @@
        "37086.0     17\n",
        "37080       16\n",
        "37027       15\n",
-       "37220.0     14\n",
        "37213       14\n",
+       "37220.0     14\n",
        "37246.0      7\n",
        "37220        6\n",
-       "37232.0      5\n",
        "37075.0      5\n",
-       "37240.0      5\n",
        "37189        5\n",
+       "37232.0      5\n",
+       "37240.0      5\n",
        "37135        4\n",
-       "37122.0      4\n",
        "37064.0      4\n",
+       "37122.0      4\n",
        "37232        3\n",
        "37066.0      2\n",
+       "37073.0      2\n",
+       "37172.0      2\n",
        "37090.0      2\n",
        "37160.0      2\n",
-       "37172.0      2\n",
-       "37073.0      2\n",
        "37086        1\n",
-       "37240        1\n",
-       "37036.0      1\n",
-       "37040.0      1\n",
-       "37363.0      1\n",
-       "37067.0      1\n",
-       "38506.0      1\n",
+       "37663.0      1\n",
        "38401.0      1\n",
        "37087.0      1\n",
-       "37663.0      1\n",
-       "37129.0      1\n",
+       "37240        1\n",
+       "37067.0      1\n",
+       "37363.0      1\n",
        "37130.0      1\n",
+       "37040.0      1\n",
+       "37036.0      1\n",
        "37135.0      1\n",
+       "38506.0      1\n",
+       "37129.0      1\n",
        "Name: ZIP, dtype: int64"
       ]
      },
@@ -36005,7 +36006,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a166e1f8f994baaa36f641abc1474ce",
+       "model_id": "163abf39eeaa4ba08c5483e9b4f3cc6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36054,7 +36055,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = px.line(\n",
+    "    data_frame=covid_only, \n",
+    "    x=\"Date\", y=\"Confirmed\", color=\"Country\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.scatter(\n",
+    "    data_frame=covid_only, \n",
+    "    x=\"Date / Time Opened\", \n",
+    "    y=\"lifeExp\", \n",
+    "    title=\"GDP Per Capita vs Life Expectancy\", \n",
+    "    labels = dict(\n",
+    "        gdpPercap=\"GDP Per Capita\", \n",
+    "        lifeExp=\"Life Expectancy\", \n",
+    "        continent=\"Continents\",\n",
+    "        pop=\"Population\"\n",
+    "    ),\n",
+    "    width=850,\n",
+    "    height=500,\n",
+    "#     template=\"presentation\",\n",
+    "    color=\"continent\",\n",
+    "    size=\"pop\",\n",
+    "    size_max=100,\n",
+    "    hover_name=\"country\",\n",
+    "    opacity=0.5,\n",
+    "    animation_frame=\"Month\",\n",
+    "    animation_group=\"country\",\n",
+    "    log_x=True,\n",
+    "    range_x=[100, 100000],\n",
+    "    range_y=[25, 90]\n",
+    ")\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
@@ -36087,6 +36126,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
